--- a/src/routes/index/components/inProgressGame/InProgressGame.module.scss
+++ b/src/routes/index/components/inProgressGame/InProgressGame.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  padding: 0.3rem;
+  padding: 0.2rem 0.3rem;
   vertical-align: center;
   align-items: center;
   justify-content: space-between;
@@ -12,6 +12,7 @@
   left: 0;
   background: transparent;
   border-radius: var(--border-radius);
+  gap: 0.3rem;
 
   &:hover {
     left: 0.3rem;
